2005-06-19:  0.2.2       -- added image rotating options

2005-05-15:  0.2.1       -- rar, zip, ace archives are recognized by magic
                            bytes first, not by extension
                         -- fixed bug with handling relative comicbook paths
                            from commandline
			 -- fixed bug with progress window reappearing

2005-05-09:  0.2.0       -- 'Manage bookmarks' option added
                         -- many internal improvements and small bugfixes
                         -- Open next/previous actions are enabled only for
			    archives from now

2005-05-04:  0.1.9       -- option to hide statusbar in fullscreen mode added
                         -- keyboard shortcuts for 'Open next' and 'Open
			    previous' added
			 -- changing mouse cursor takes effect immediately now -
			    no need to restart
			 -- fixed compilation error for some gcc versions (<typeinfo>
			    issue)
			 -- fixed bug with bookmarked page numbers starting
			    from 0

2005-04-23:  0.1.8       -- support for ace (cba), tar.gz and tar.bz2 archives
                         -- improved mouse-dragging, reversed mouse-dragging
			    directions
			 -- 'Open next' and 'Open previous' actions added
			 -- Japanese mode for two pages mode added
			 -- Option for 1- or 2- pages step in two pages mode
			    added
			 -- 'Small mouse cursor' option added
			 -- size of the current page(s) is shown in statusbar
			 -- most menu/toolbar functions are inactive now if no comic
			    book is opened
			 -- fixed bug with not restoring initial status of statusbar

2005-04-05:  0.1.7       -- thread-based thumbnail loading
                         -- thumbnails are smooth-scaled now
			 -- added option to set font for comic book info
			    dialog
                         -- added progress bar for archives decompression
			 -- added statusbar
			 -- fixed bug with thumbnails view taking keyboard
			    focus

2005-03-30:  0.1.6       -- thumbnails view