@@ -1,27 +1,28 @@
 dnl @synopsis BNV_HAVE_QT [--with-Qt-dir=DIR] [--with-Qt-lib=LIB]
 dnl @synopsis BNV_HAVE_QT [--with-Qt-include-dir=DIR] [--with-Qt-bin-dir=DIR] [--with-Qt-lib-dir=DIR] [--with-Qt-lib=LIB]
-dnl !
-dnl Search for Trolltech's Qt GUI framework.
 dnl
-dnl Searches common directories for Qt include files, libraries and Qt binary
-dnl utilities. The macro supports several different versions of the Qt
-dnl framework being installed on the same machine.
-dnl Without options, the macro is designed to look for the latest library,
-dnl i.e., the highest definition of QT_VERSION in qglobal.h.
-dnl By use of one or more options a different library may be selected. There
-dnl are two different sets of options.
-dnl Both sets contain the option --with-Qt-lib=LIB which can be used to
-dnl force the use of a particular version of the library file when more than
-dnl one are available. LIB must be in the form as it would appear behind the
-dnl "-l" option to the compiler. Examples for LIB would be "qt-mt" for the
-dnl multi-threaded version and "qt" for the regular version.
-dnl In addition to this, the first set consists of an option --with-Qt-dir=DIR
-dnl which can be used when the installation conforms to Trolltech's standard
-dnl installation, which means that header files are in DIR/include, binary
-dnl utilities are in DIR/bin and the library is in DIR/lib.
-dnl The second set of options can be used to indicate individual locations
-dnl for the header files, the binary utilities and the library file, in
-dnl addition to the specific version of the library file.
+dnl @summary Search for Trolltech's Qt GUI framework.
+dnl
+dnl Searches common directories for Qt include files, libraries and Qt
+dnl binary utilities. The macro supports several different versions of
+dnl the Qt framework being installed on the same machine. Without
+dnl options, the macro is designed to look for the latest library,
+dnl i.e., the highest definition of QT_VERSION in qglobal.h. By use of
+dnl one or more options a different library may be selected. There are
+dnl two different sets of options. Both sets contain the option
+dnl --with-Qt-lib=LIB which can be used to force the use of a
+dnl particular version of the library file when more than one are
+dnl available. LIB must be in the form as it would appear behind the
+dnl "-l" option to the compiler. Examples for LIB would be "qt-mt" for
+dnl the multi-threaded version and "qt" for the regular version. In
+dnl addition to this, the first set consists of an option
+dnl --with-Qt-dir=DIR which can be used when the installation conforms
+dnl to Trolltech's standard installation, which means that header files
+dnl are in DIR/include, binary utilities are in DIR/bin and the library
+dnl is in DIR/lib. The second set of options can be used to indicate
+dnl individual locations for the header files, the binary utilities and
+dnl the library file, in addition to the specific version of the
+dnl library file.
 dnl
 dnl The following shell variable is set to either "yes" or "no":
 dnl
@@ -36,9 +37,10 @@ dnl   QT_UIC
 dnl   QT_DIR
 dnl
 dnl which respectively contain an "-I" flag pointing to the Qt include
-dnl directory, link flags necessary to link with Qt and X, the name of the
-dnl meta object compiler and the user interface compiler both with full path,
-dnl and finaly the variable QTDIR as Trolltech likes to see it defined (if
+dnl directory (and "-DQT_THREAD_SUPPORT" when LIB is "qt-mt"), link
+dnl flags necessary to link with Qt and X, the name of the meta object
+dnl compiler and the user interface compiler both with full path, and
+dnl finaly the variable QTDIR as Trolltech likes to see it defined (if
 dnl possible).
 dnl
 dnl Example lines for Makefile.in:
@@ -47,18 +49,19 @@ dnl   CXXFLAGS = @QT_CXXFLAGS@
 dnl   MOC      = @QT_MOC@
 dnl
 dnl After the variables have been set, a trial compile and link is
-dnl performed to check the correct functioning of the meta object compiler.
-dnl This test may fail when the different detected elements stem from
-dnl different releases of the Qt framework. In that case, an error message
-dnl is emitted and configure stops.
+dnl performed to check the correct functioning of the meta object
+dnl compiler. This test may fail when the different detected elements
+dnl stem from different releases of the Qt framework. In that case, an
+dnl error message is emitted and configure stops.
 dnl
 dnl No common variables such as $LIBS or $CFLAGS are polluted.
 dnl
 dnl Options:
 dnl
 dnl --with-Qt-dir=DIR: DIR is equal to $QTDIR if you have followed the
-dnl installation instructions of Trolltech. Header files are in DIR/include,
-dnl binary utilities are in DIR/bin and the library is in DIR/lib.
+dnl installation instructions of Trolltech. Header files are in
+dnl DIR/include, binary utilities are in DIR/bin and the library is in
+dnl DIR/lib.
 dnl
 dnl --with-Qt-include-dir=DIR: Qt header files are in DIR.
 dnl
@@ -68,19 +71,24 @@ dnl --with-Qt-lib-dir=DIR: The Qt library is in DIR.
 dnl
 dnl --with-Qt-lib=LIB: Use -lLIB to link with the Qt library.
 dnl
-dnl If some option "=no" or, equivalently, a --without-Qt-* version is given
-dnl in stead of a --with-Qt-*, "have_qt" is set to "no" and the other
-dnl variables are set to the empty string.
+dnl If some option "=no" or, equivalently, a --without-Qt-* version is
+dnl given in stead of a --with-Qt-*, "have_qt" is set to "no" and the
+dnl other variables are set to the empty string.
 dnl
-dnl Calls BNV_PATH_QT_DIRECT as a subroutine.
-dnl
-dnl @version $Id: acinclude.m4,v 1.1 2004/12/18 12:36:55 yogin Exp $
-dnl @author Bastiaan N. Veelo <Bastiaan.N.Veelo@immtek.ntnu.no>
-dnl
+dnl @category InstalledPackages
+dnl @author Bastiaan Veelo <Bastiaan.N.Veelo@ntnu.no>
+dnl @version 2005-01-24
+dnl @license AllPermissive
+
+dnl Copyright (C) 2001, 2002, 2003, 2005, Bastiaan Veelo
+
+dnl Calls BNV_PATH_QT_DIRECT (contained in this file) as a subroutine.
 AC_DEFUN([BNV_HAVE_QT],
 [
-  dnl THANKS! This code includes bug fixes by:
-  dnl Tim McClarren.
+  dnl THANKS! This code includes bug fixes and contributions made by:
+  dnl Tim McClarren,
+  dnl Dennis R. Weilert,
+  dnl Qingning Huo.
 
   AC_REQUIRE([AC_PROG_CXX])
   AC_REQUIRE([AC_PATH_X])
@@ -178,6 +186,9 @@ AC_DEFUN([BNV_HAVE_QT],
   fi   # $have_qt reflects the system status
   if test x"$have_qt" = xyes; then
     QT_CXXFLAGS="-I$bnv_qt_include_dir"
+    if test $bnv_qt_lib = "qt-mt"; then
+        QT_CXXFLAGS="$QT_CXXFLAGS -DQT_THREAD_SUPPORT"
+    fi
     QT_DIR="$bnv_qt_dir"
     QT_LIBS="$bnv_qt_LIBS"
     # If bnv_qt_dir is defined, utilities are expected to be in the
@@ -311,8 +322,7 @@ EOF
 
 dnl Internal subroutine of BNV_HAVE_QT
 dnl Set bnv_qt_dir bnv_qt_include_dir bnv_qt_bin_dir bnv_qt_lib_dir bnv_qt_lib
-dnl Copyright 2001 Bastiaan N. Veelo <Bastiaan.N.Veelo@immtek.ntnu.no>
-AC_DEFUN([BNV_PATH_QT_DIRECT],
+AC_DEFUN(BNV_PATH_QT_DIRECT,
 [
   ## Binary utilities ##
   if test x"$with_Qt_bin_dir" != x; then
@@ -349,12 +359,21 @@ AC_DEFUN([BNV_PATH_QT_DIRECT],
   fi dnl Found header files.
 
   # Are these headers located in a traditional Trolltech installation?
-  if test -x $bnv_qt_include_dir/../bin/moc &&
-     ls $bnv_qt_include_dir/../lib/libqt* > /dev/null; then
-    # Then the rest is is a piece of cake
-    bnv_qt_dir="`echo $bnv_qt_include_dir | sed ss/includess`"
+  # That would be $bnv_qt_include_dir stripped from its last element:
+  bnv_possible_qt_dir=`dirname $bnv_qt_include_dir`
+  if test -x $bnv_possible_qt_dir/bin/moc &&
+     ls $bnv_possible_qt_dir/lib/libqt* > /dev/null; then
+    # Then the rest is a piece of cake
+    bnv_qt_dir=$bnv_possible_qt_dir
     bnv_qt_bin_dir="$bnv_qt_dir/bin"
-    bnv_qt_lib_dir="$bnv_qt_dir/lib"
+    ### Start patch Dennis Weilert
+    #bnv_qt_lib_dir="$bnv_qt_dir/lib"
+    if test x"$with_Qt_lib_dir" != x; then
+      bnv_qt_lib_dir="$with_Qt_lib_dir"
+    else
+      bnv_qt_lib_dir="$bnv_qt_dir/lib"
+    fi
+    ### End patch Dennis Weilert
     # Only look for lib if the user did not supply it already
     if test x"$bnv_qt_lib" = xNO; then
       bnv_qt_lib="`ls $bnv_qt_lib_dir/libqt* | sed -n 1p |
