@@ -1,3 +1,7 @@
+2005-06-xx:  0.2.3       -- page is scrolled to top-right corner in japanese mode
+                         -- autoconf script updated with newest version of bnv_have_qt
+			    macro
+			 
 2005-06-19:  0.2.2       -- added image rotating options
 
 2005-05-15:  0.2.1       -- rar, zip, ace archives are recognized by magic
